--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "core-js": "^3.6.5",
@@ -23,7 +24,8 @@
     "helmet": "^4.2.0",
     "mongoose": "^5.10.14",
     "regenerator-runtime": "^0.13.7",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "validator": "^13.1.17"
   },
   "description": "",
   "devDependencies": {
