--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^4.2.0",
     "mongoose": "^5.10.14",
     "regenerator-runtime": "^0.13.7",
+    "request": "^2.88.2",
     "style-loader": "^1.2.1",
     "validator": "^13.1.17"
   },
